--- a/Todo-List/package.json
+++ b/Todo-List/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "todo-list",
-  "version": "1.0.0",
-  "description": "",
+  "name": "todo_list",
+  "private": true,
+  "version": "0.1.0",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0"
+  },
+  "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "express": "^4.14.0",
+    "immutable": "^3.8.1",
     "react": "^15.4.1",
-    "react-redux": "^5.0.1",
     "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "redux-immutable": "^3.0.9",
     "webpack": "^1.14.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
     "start": "node  server.js"
   },
   "author": "",
