--- a/repairorder-demo/package.json
+++ b/repairorder-demo/package.json
@@ -1,7 +1,6 @@
 {
   "name": "repairorder-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "dependencies": {
     "antd": "^2.6.0",
@@ -27,5 +26,6 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
