--- a/repairorder-demo/package.json
+++ b/repairorder-demo/package.json
@@ -1,24 +1,30 @@
 {
   "name": "repairorder-demo",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "dependencies": {
-    "antd": "^2.6.0",
     "babel": "^6.5.2",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
+    "antd": "^2.6.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-plugin-import": "^1.1.0",
     "director": "^1.2.8",
+    "babel-loader": "^6.2.10",
+    "babel-core": "^6.21.0",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "immutable": "^3.8.1",
+    "css-loader": "^0.26.1",
+    "redux-immutable": "^3.0.9",
     "react": "^15.4.1",
+    "isomorphic-fetch": "^2.2.1",
+    "immutable": "^3.8.1",
     "react-dom": "^15.4.1",
-    "react-redux": "^5.0.1",
-    "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1",
+    "react-redux": "^5.0.1",
     "webpack": "^1.14.0",
-    "redux-immutable": "^3.0.9"
+    "redux": "^3.6.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -26,6 +32,5 @@
     "start": "node server.js"
   },
   "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "ISC"
 }
